Fix spacing between sponsors.

--- a/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
+++ b/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
@@ -36,10 +36,16 @@ body {
 // Sponsor List Page(s)
 .view-exhibitors,
 .view-sponsors-12x {
+  .attachment-after {
+    .view-content {
+      .views-row {
+        padding-top: 40px;
+      }
+    }
+  }
   .views-row {
     padding-top: 40px;
     clear: both;
-    margin-bottom: 40px;
   }
   .views-row-first {
     padding-top: 0;
